# ion-type-analysis

./: DESCRIPTION  NAMESPACE  README.md  codemeta.json  pyproject.toml  tox.ini
.mzmine/batch/: di_ot_2.5_neg.mzbatch  di_ot_2.5_pos.mzbatch  di_ot_5_enamdisc_neg.mzbatch  di_ot_5_enamdisc_pos.mzbatch  di_ot_5_enammol_neg.mzbatch  di_ot_5_enammol_pos.mzbatch  di_ot_5_mcebio_neg.mzbatch  di_ot_5_mcebio_pos.mzbatch  di_ot_5_mcedrug_neg.mzbatch  di_ot_5_mcedrug_pos.mzbatch  di_ot_5_mcescaf_neg.mzbatch  di_ot_5_mcescaf_pos.mzbatch  di_ot_5_nihnp_neg.mzbatch  di_ot_5_nihnp_pos.mzbatch  di_ot_5_otavapep_neg.mzbatch  di_ot_5_otavapep_pos.mzbatch  di_tof_0_pos.mzbatch  di_tof_100_pos.mzbatch  di_tof_10_pos.mzbatch  di_tof_5_neg.mzbatch  di_tof_5_pos.mzbatch  di_tof_example.mzbatch  di_tof_test.mzbatch  lc_at_5_pos.mzbatch
R/: add_sample.R  calculate_jsd.R  check_occurrences.R  choose_pal.R  create_intensities_df.R  dependencies.R  export_figure.R  filter_fragments.R  import_dirs.R  import_standards.R  import_unknowns.R  install_dependencies.R  ionTypeAnalysis-package.R  load_compound_classes.R  params.R  paths.R  plot_bins.R  plot_distributions.R  plot_distributions_relative_intensities.R  plot_upset.R  rainplots_by_group.R  reformat_table.R  select_intervals.R  venn_highlight_regions.R  venn_plot_highlighted.R  venn_plot_simple.R  venn_prepare_df.R
data/: .gitignore  MSV000093526.txt  metadata_neg.tsv  metadata_pos.tsv
data/example/: 20230916_nexus_plate_1_P5_pos_G4_CID_20ev.mzML  20230916_nexus_plate_1_P5_pos_H3_CID_20ev.mzML
inst/scripts/: concatenate_standards.R  plot_figures.R
man/: add_sample.Rd  calculate_jsd.Rd  check_occurrences.Rd  choose_pal.Rd  create_intensities_df.Rd  dependencies.Rd  export_figure.Rd  filter_fragments.Rd  import_dirs.Rd  import_standards.Rd  import_unknowns.Rd  install_dependencies_1.Rd  install_dependencies_2.Rd  ionTypeAnalysis-package.Rd  load_compound_classes.Rd  plot_bins.Rd  plot_distributions.Rd  plot_distributions_relative_intensities.Rd  plot_upset.Rd  rainplots_by_group.Rd  reformat_table.Rd  select_intervals.Rd  venn_highlight_regions.Rd  venn_plot_highlighted.Rd  venn_plot_simple.Rd  venn_prepare_df.Rd
man/figures/: .gitignore
notebooks/: .gitignore  count_groups.py  download_massive.py  download_metadata.py  download_zenodo.py  filter_subformulas.py  remove_empty.py
